santoni: Disable window rounded corner animations
For graphics performance reasons

Bug: 122347746
Test: visual; swipe up on overview

Signed-off-by: xNombre <kartapolska@gmail.com>
Change-Id: If7ee3e8d311c459c468d05d87f8ce6245d49c329

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -477,4 +477,6 @@
     <!-- Aspect ratio of screen -->
     <item name="config_screenAspectRatio" format="float" type="dimen">1.7</item>
 
+    <!-- Disable rounded corners on windows to improve graphics performance -->
+    <bool name="config_supportsRoundedCornersOnWindows">false</bool>
 </resources>
