santoni: overlay: set a lower screenrecording quality.
Change-Id: Ib25f68e39fab5a35c40c917570e4901c5538733d

--- a/overlay-pa/frameworks/base/core/res/res/values/pa_config.xml
+++ b/overlay-pa/frameworks/base/core/res/res/values/pa_config.xml
@@ -44,4 +44,7 @@
 
     <!-- FP Location -->
     <integer name="config_fingerprintSensorLocation">0</integer>
+
+    <!-- Allow devices to use a lower screenrecording bitrate because of old hardware -->
+    <bool name="config_device_needs_lower_bitrate">true</bool>
 </resources>
