--- a/overlay-pa/frameworks/base/core/res/res/values/pa_config.xml
+++ b/overlay-pa/frameworks/base/core/res/res/values/pa_config.xml
@@ -41,4 +41,7 @@
          For example, a device with Home, Back and Recents keys would set this
          config to 19. -->
     <integer name="config_deviceHardwareKeys">19</integer>
+
+    <!-- FP Location -->
+    <integer name="config_fingerprintSensorLocation">0</integer>
 </resources>
