--- a/overlay/packages/services/Telephony/res/xml/telephony_injection.xml
+++ b/overlay/packages/services/Telephony/res/xml/telephony_injection.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  Copyright (c) 2019 The Linux Foundation. All rights reserved.
-  Not a Contribution.
+  Copyright (c) 2019 Qualcomm Technologies, Inc.
+  All Rights Reserved.
+  Confidential and Proprietary - Qualcomm Technologies, Inc.
+  Not a contribution.
   Copyright (C) 2018 The Android Open Source Project
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
@@ -21,7 +23,7 @@
         e.g. "/system/framework/eg-telephony-common.jar"
 -->
 <injection package="com.qualcomm.qti.internal.telephony.QtiTelephonyComponentFactory"
-           jar="/system_ext/framework/qti-telephony-common.jar:/system/framework/qti-telephony-common.jar:/product/framework/qti-telephony-common.jar:/product/framework/qti-telephony-hidl-wrapper.jar:/product/framework/qti-telephony-utils.jar:/system/framework/qti-telephony-utils.jar">
+           jar="/system_ext/framework/qti-telephony-common.jar:/system/framework/qti-telephony-common.jar:/product/framework/qti-telephony-common.jar:/product/framework/qti-telephony-hidl-wrapper.jar:/system_ext/framework/qti-telephony-hidl-wrapper.jar:/product/framework/qti-telephony-utils.jar:/system/framework/qti-telephony-utils.jar:/system_ext/framework/qti-telephony-utils.jar">
     <components>
         <!-- Components use injected component factory,
             e.g. com.android.internal.telephony.ServiceStateTracker
@@ -34,8 +36,10 @@
         <component>com.android.internal.telephony.GsmCdmaPhone</component>
         <component>com.android.internal.telephony.PhoneSwitcher</component>
         <component>com.android.internal.telephony.IccPhoneBookInterfaceManager</component>
+        <component>com.android.internal.telephony.dataconnection.DcTracker</component>
         <component>com.android.internal.telephony.RIL</component>
         <component>com.android.internal.telephony.TelephonyComponentFactory</component>
         <component>com.android.internal.telephony.MultiSimSettingController</component>
+        <component>com.android.internal.telephony.CarrierInfoManager</component>
     </components>
 </injection>
